feat: 增加 LLM 账单解析 MVP，重构导入流程为统一草稿机制 (#2)
一、LLM 账单解析能力（MVP）
新增功能
支持通过 LLM 解析银行账单（CSV/TXT），生成结构化账单记录

实现文件编码自动检测（GBK / GB2312 / UTF-8），解决中文乱码问题

提供 MiniMax LLM 实现（OpenAI 兼容接口），通过 minimax.api-key 配置启用

新增 LlmParserService 接口，支持运行时切换真实 LLM 或 Mock 实现

架构优化
重构 LLM 解析流程：文件提取 → Prompt 构建 → LLM 调用 → 结果映射

LlmBillParserFacade 作为统一门面，依赖注入 LlmParserService

Mock 实现移除 @service，仅用于测试环境

测试完善
新增端到端集成测试 LlmBillParserIntegrationTest（使用真实 CSV/GBK 文件）

修复 DTO 与 Entity 字段类型不一致问题（如 accountId、tags）

完善异步任务状态返回（FAILED 状态携带错误信息）

二、导入流程重构为统一草稿机制
核心变更
引入 统一草稿箱（Unified Draft） 机制，替代原有直接写入 transaction 表的方式

新增草稿状态枚举 DraftMatchStatusEnum，支持匹配中、已匹配、待确认等状态

支持草稿记录的筛选、排序、分页展示

提供字段锁定接口：POST /records/{id}/lock 和 /records/{id}/unlock

导入流程优化
去掉文件重复上传的硬限制，改为 warn 日志提示

UnifiedDraftBatch 增加 accountId 字段，用于账户推断

DraftCommitService.inferAccount 优先使用批次账户信息

删除旧链路中的 transactionRepo.saveAll 写入逻辑

前端联动
增强草稿记录表格展示与自动刷新行为

草稿箱与旧导入记录视图桥接完成

三、其他修复与优化
修复多个单元测试编译错误与断言失败

添加 feature/** 分支的 CI 触发规则

新增 application-test.yml，确保测试环境不使用真实 LLM

---------

Co-authored-by: stanic-xyz <monkeycode-ai@chaitin.com>
Co-authored-by: Shabao <shabao@example.com>
Reviewed-on: https://gitea.chenyunlong.cn/stan/qing/pulls/2
Co-authored-by: Stan <1576302867@qq.com>
Co-committed-by: Stan <1576302867@qq.com>